# VoxelX

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: chunkMap.h  chunkMeshGeneration.c  dataTypes.h  engine.c  engine.h  gui.c  gui.h  main.c  player.c  player.h  settings.h  world.c  world.h
src/engine/: dataTypes.h  engine.c  engine.h  gui.c  gui.h  main.c  mainThreadJobQueue.c  mainThreadJobQueue.h  threadPool.c  threadPool.h  voxelTasks.c  voxelTasks.h
src/player/: player.c  player.h  raycast.c  raycast.h
src/utilities/: darray.h  map.h
src/world/: chunkMap.h  chunkMeshGeneration.c  chunkMeshGeneration.h  chunkPool.c  chunkPool.h  world.c  worldGeneration.c  worldGeneration.h
src/world/meshing/: chunkMeshGeneration.c  meshGenerationHelpers.c  meshGenerationHelpers.h
